--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               servizio di ristorazione che valorizza i nostri prodotti, integrandoli con eccellenze provenienti da altre
               regioni d'Italia.
               <br>
-              Venite a trovarci a Moncalvo, un incantevole paese non lontano da Asti, facilmente raggiungibile. <br>La
+              Venite a trovarci a Grana Monferrato, un incantevole paese non lontano da Asti, facilmente raggiungibile. <br>La
               nostra azienda è una Società a Responsabilità Limitata (SRL), garantendo affidabilità e qualità in ogni
               aspetto del nostro lavoro.
             </p>
