--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Restaurantly Bootstrap Template - Index</title>
+  <title>Agriturismo nta al munfra | Home Page</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -1076,7 +1076,7 @@
         </div>
       </div>
 
-      <div data-aos="fade-up">
+      <div data-aos="fade-up" class="responsive-map">
         <iframe style="border:0; width: 100%; height: 550px;"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3346.874314445644!2d8.304622976586591!3d44.9941781646761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47879600ed964ced%3A0xbeb60c614639d29d!2sVia%20Roma%2C%2070%2C%2014031%20Grana%20Monferrato%20AT!5e1!3m2!1sit!2sit!4v1716023502304!5m2!1sit!2sit"
           frameborder="0" allowfullscreen></iframe>
@@ -1148,5 +1148,20 @@
       new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
     }
   </script>
-
+<style>
+  .responsive-map {
+position: relative;
+padding-bottom: 75%;
+padding-top: 0;
+height: 0;
+overflow: hidden;
+}
+.responsive-map iframe {
+position: absolute;
+top:0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+</style>
 </body>
